@@ -1,3 +1,8 @@
+2010-03-17  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* video/fb/fbblit.c (grub_video_fbblit_blend_XXXA8888_1bit): Handle
+	alpha_mask_size == 0 case.
+
 2010-03-14  BVK Chaitanya  <bvk.groups@gmail.com>
 
 	GRUB shell lexer and parser improvements.
